// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> Icon Button with all variants and different icon 1`] = `
"Snapshot Diff:
- First value
+ Second value

  <Button
-   icon=\\"plus\\"
+   flat={true}
+   focusable={true}
+   icon=\\"minus\\"
    label=\\"Click Me!\\"
+   primary={true}
    type=\\"button\\"
  >
    <span>
      <button
        aria-label=\\"Click Me!\\"
-       className=\\"btn btnIcon\\"
+       className=\\"btn btnFocusable btnPrimary btnFlat btnIcon\\"
        type=\\"button\\"
      >
        <span
-         className=\\"dashicons dashicons-plus\\"
+         className=\\"dashicons dashicons-minus\\"
        />
      </button>
    </span>
  </Button>"
`;

exports[`<Button /> Icon Button with defaults 1`] = `
<Button
  icon="plus"
  label="Click Me!"
  type="button"
>
  <span>
    <button
      aria-label="Click Me!"
      className="btn btnIcon"
      type="button"
    >
      <span
        className="dashicons dashicons-plus"
      />
    </button>
  </span>
</Button>
`;

exports[`<Button /> Text Button with all variants 1`] = `
"Snapshot Diff:
- First value
+ Second value

  <Button
+   flat={true}
+   focusable={true}
    label=\\"Click Me!\\"
+   primary={true}
    type=\\"button\\"
  >
    <span>
      <button
        aria-label=\\"Click Me!\\"
-       className=\\"btn\\"
+       className=\\"btn btnFocusable btnPrimary btnFlat\\"
        type=\\"button\\"
      />
    </span>
  </Button>"
`;

exports[`<Button /> Text Button with defaults 1`] = `
<Button
  label="Click Me!"
  type="button"
>
  <span>
    <button
      aria-label="Click Me!"
      className="btn"
      type="button"
    />
  </span>
</Button>
`;

exports[`<Button /> Text Button with flat 1`] = `
"Snapshot Diff:
- First value
+ Second value

  <Button
+   flat={true}
    label=\\"Click Me!\\"
    type=\\"button\\"
  >
    <span>
      <button
        aria-label=\\"Click Me!\\"
-       className=\\"btn\\"
+       className=\\"btn btnFlat\\"
        type=\\"button\\"
      />
    </span>
  </Button>"
`;

exports[`<Button /> Text Button with focusable 1`] = `
"Snapshot Diff:
- First value
+ Second value

  <Button
+   focusable={true}
    label=\\"Click Me!\\"
    type=\\"button\\"
  >
    <span>
      <button
        aria-label=\\"Click Me!\\"
-       className=\\"btn\\"
+       className=\\"btn btnFocusable\\"
        type=\\"button\\"
      />
    </span>
  </Button>"
`;

exports[`<Button /> Text Button with primary 1`] = `
"Snapshot Diff:
- First value
+ Second value

  <Button
    label=\\"Click Me!\\"
+   primary={true}
    type=\\"button\\"
  >
    <span>
      <button
        aria-label=\\"Click Me!\\"
-       className=\\"btn\\"
+       className=\\"btn btnPrimary\\"
        type=\\"button\\"
      />
    </span>
  </Button>"
`;

exports[`<Button /> Text Button with tooltip 1`] = `
"Snapshot Diff:
- First value
+ Second value

  <Button
    label=\\"Click Me!\\"
+   tooltip={
+     Object {
+       \\"position\\": \\"top\\",
+       \\"text\\": \\"Hello world\\",
+     }
+   }
    type=\\"button\\"
  >
    <span>
+     <Tooltip
+       active={false}
+       id=\\"Click_Me!\\"
+       text=\\"Hello world\\"
+       transform=\\"\\"
+     >
+       <div
+         className=\\"tooltip\\"
+         id=\\"Click_Me!\\"
+         role=\\"tooltip\\"
+         style={
+           Object {
+             \\"transform\\": \\"\\",
+           }
+         }
+       >
+         Hello world
+       </div>
+     </Tooltip>
      <button
+       aria-describedby=\\"Click_Me!\\"
        aria-label=\\"Click Me!\\"
        className=\\"btn\\"
+       onMouseEnter={[Function anonymous]}
+       onMouseLeave={[Function anonymous]}
        type=\\"button\\"
      />
    </span>
  </Button>"
`;
